--- a/web/test.html
+++ b/web/test.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <mango-data-grid rows="{{ rows }}" columns="{{ columns }}" width="320" height="240"></mango-data-grid>
+  <mango-data-grid rows="{{ rows }}" columns="{{ columns }}" height="{{ 320 }}"></mango-data-grid>
 
   <script type="application/dart" src="test.dart"></script>
   <script src="packages/browser/dart.js" type="text/javascript"></script>
